refactor: toList 변환 (#43)